# play-CMake

./: .gitignore  README.md
Step 1 A Basic Starting Point/: CMakeLists.txt
Step1/: CMakeLists.txt  TutorialConfig.h.in  tutorial.cxx
Step2/: CMakeLists.txt  TutorialConfig.h.in  tutorial.cxx
Step2/MathFunctions/: CMakeLists.txt
